# Semal

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: publish-to-test-pypi.yaml
docs/source/: api.rst  conf.py
semal/: preprocessing.py  utils.py
